[package]
name = "app"
version = "0.1.0"
description = "App"
authors = ["David Komer <david.komer@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Common deps
shared = { path = "../shared", features=["frontend"] }
contract_registry = { path = "../contracts/registry", default-features = false, features=["frontend"] }
contract_account = { path = "../contracts/account", default-features = false, features=["frontend"] }
wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.77", features = ["nightly"] }
js-sys = "0.3.54"
once_cell = "1.8.0"
web-sys = { version = "0.3.54", features = [
    'Url',
    'Request',
    'RequestInit',
    'Response',
    'RequestMode',
    'Headers',
    'Document', 
    'Window',
    'Storage',
    'Location',
    'Element',
    'HtmlInputElement',
    'HtmlImageElement',
    'HtmlSelectElement',
    'KeyboardEvent',
    'MouseEvent',
    'UrlSearchParams',
    'FileList',
    'FileReader',
] }
wasm-bindgen-futures = "0.4.27"
dominator = "0.5.19"
futures-signals = "0.3.22"
dominator_helpers = "0.7.2"
serde = { version = "1.0.130", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
serde_json = "1.0.67"
serde_qs = "0.8.4"
futures = "0.3.17"
log = "0.4.14"
cfg-if = "1.0.0"
gloo-timers = { version = "0.2.1", features = ["futures"] }
gloo-events = "0.1.1"
awsm_web = { version = "0.28.1", features = ["loaders", "serde_iso"] }
dotenv = "0.15.0"
base64 = "0.13.0"

[features]
quiet = []
default = ["wee_alloc"]
local = ["quiet", "wasm-logger", "console_error_panic_hook", "shared/local", "contract_registry/local", "contract_account/local"]
release = ["shared/release", "contract_registry/release", "contract_account/local"]
