[package]
name = "shared"
version = "0.1.0"
description = "Shared"
authors = ["David Komer <david.komer@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
thiserror = "1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde"] }
cfg-if = "1.0.0"
log = "0.4.14"
schemars = "0.8.3"
cosmwasm-std = "0.16.2"
bincode = "1.3.3"
base64 = "0.13.0"
# frontend 
wasm-bindgen = { version = "0.2.74", features = ["nightly"], optional = true}
js-sys = { version = "0.3.51", optional = true }

[features]
quiet = []
frontend = ["wasm-bindgen", "js-sys"]
local = ["quiet"]
release = []