[package]
name = "contract_hub"
version = "0.1.0"
description = "Hub Contract"
authors = ["David Komer <david.komer@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../../shared" }
terra-cosmwasm = "2.2.0"
cosmwasm-std = "0.16.2"
cosmwasm-storage = "0.16.2"
cw-storage-plus = "0.9.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
cfg-if = "1.0.0"
bincode = "1.3.3"
base64 = "0.13.0"

[features]
# for quicker tests, cargo test --no-default-features
default = ["entry"]
entry = []
quiet = []
frontend = []
local = ["quiet"]
release = []
# use library feature to disable all instantiate/execute/query exports
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]